<?xml version="1.0"?>
<package>
  <name>ime_slam</name> <!-- This is a meta package! -->
  <version>0.0.1</version>
  <description>IME Solution for a SLAM problem <a href="TODO">IME_SLAM</a>TODO</description>

  <maintainer email="vidalfs@gmail.com">Fabio Vidal</maintainer>
  <maintainer email="aopbarcelos@gmail.com">Andre Barcelos</maintainer>
  <maintainer email="thiago.eustakio@gmail.com">Thiago Oliveira</maintainer>
  <maintainer email="rpauloime@gmail.com">Paulo Rosa</maintainer>

  <license>BSD,LGPL,Apache 2.0</license>

  <url type="website">TODO</url>
  <author>Fabio Vidal, Andre Barcelos, Thiago Oliveira, Paulo Rosa</author>>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ime_simulation</run_depend>
  <run_depend>ime_vision</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
